1999-02-15  Bob Woodside <proteus@pcnet.com>

	* FvwmConsole/FvwmConsole.h: Switched the order of the includes for
	un.h and sockets.h, to correct a compile failure under Linux 2.2.1.

1999-02-14  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmGoodStuff/FvwmGoodStuff.c (RelieveWindow):
	* FvwmGoodStuff/FvwmGoodStuff.h: removed inline from declaration of
	RelieveWindow

1999-01-26  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* FvwmConfig/WinBase.C: Removed include of strings.h, moved
	include of config.h to top.

1999-01-13  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* FvwmTaskBar/FvwmTaskBar.c (ParseConfigLine): Made argument just
	"char", since "unsigned char" caused problems on systems with
	signed chars.

	* FvwmConsole/FvwmConsole.c: Removed non-constant pointer from
	initializer of xterm_a.

Sun Jan 10 23:13:45 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmGoodStuff/FvwmGoodStuff.c (main): Inserted parentheses
	around && within ||.

Sun Jan 10 23:06:00 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmWharf/FvwmWharf.c:
	* FvwmTaskBar/FvwmTaskBar.c:
	* FvwmDebug/FvwmDebug.c: Removed unused variables.

Sun Jan 10 21:11:09 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmWharf/FvwmWharf.c (main):
	* FvwmTaskBar/FvwmTaskBar.c (main):
	* FvwmScript/FvwmScript.c (main):
	* FvwmPipe/FvwmPipe.c (main):
	* FvwmGoodStuff/FvwmGoodStuff.c (main):
	* FvwmDebug/FvwmDebug.c (main): Fixed "control reaches end of
	non-void function" bug.

Sun Jan 10 15:14:22 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmTaskBar/Colors.c:
	* FvwmGoodStuff/FvwmGoodStuff.c (GetHilite): Removed min & max
	macros; they are already in config.h.

Sun Jan 10 15:11:15 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmCommand/FvwmCommand.c:
	* FvwmCommand/FvwmCommand.h: Replaced select() code conditional on
	__hpux with code that uses SELECT_TYPE_ARG234.

Sun Jan 10 15:08:43 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
