@@ -1,35 +1,0 @@
-<html>
-<head>
-<title>The Official FVWM Homepage - Version Information</title>
-</head>
-<body BACKGROUND="black-stone1.jpg" bgcolor="#000000" text="#ffffff" link="#FFFF66" vlink="#40FF40" alink="#ff0000">
-<center>
-<h1>The Official FVWM Homepage - Version Information</h1>
-</center>
-<h2>Version Info</h2>
-
-<ul>
-  <li>Latest Release: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.tar.gz">2.2</a>
-  <li>Latest Beta Release: N/A
-  <li>Last 1.xx Version: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-1/fvwm-1.24r.tar.gz">1.24r</a>
-      (<strong>Note!</strong>  This version is no longer supported.)
-</ul>
-
-Just click on the version numbers above to download them.
-
-<p>
-Please keep in mind that the Beta code can potentially become
-unstable or buggy at any time, so USE AT YOUR OWN RISK.  You will. of
-course, find bugs in the more stable Officially released versions too
-(see the man page for a note on this).
-
-<p>
-If you find any bugs, please enter them into the
-<a href="http://www.fvwm.org/cgi-bin/fvwm-bug">FVWM Bug Tracking
-System</a>.  Please try searching around a bit first, to be sure someone
-else hasn't already reported the problem.
-
-<p>
-<hr>
-</body>
-</html>
