@@ -1,3 +1,13 @@
+1999-03-12  Paul D. Smith  <psmith@gnu.org>
+
+	* FvwmTaskBar/ButtonArray.c (ButtonDraw): If we didn't have enough
+	room to write _any_ of the title on the button (if there are
+	_lots_ of buttons) then we'd get into an infinite loop as
+	search_len is not checked to make sure it stays >0.  Make that
+	check.  Note we don't test to see if the "..." itself will fit; I
+	suspect you could get buttons small enough that the "..." will
+	overwrite some of the button.  Oh well, at least it doesn't freeze up.
+
 1999-02-15  Bob Woodside <proteus@pcnet.com>
 
 	* FvwmConsole/FvwmConsole.h: Switched the order of the includes for
